# tinysafe-1

./: README.md  infer.py  pyproject.toml
configs/: config.json
scripts/: 01_download_datasets.py  02_generate_synthetic.py  03_label_with_claude.py  04_quality_filter.py  05_train.py  05b_leave_one_out.py  05c_threshold_sweep.py  06_evaluate.py  07_export.py
src/: dataset.py  losses.py  model.py  utils.py
