[project]
name = "safety-distill"
version = "0.1.0"
description = "Distilled dual-head safety classifier from Claude"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.36.0",
    "datasets>=2.16.0",
    "tokenizers>=0.15.0",
    "accelerate>=0.25.0",
    "scikit-learn>=1.3.0",
    "onnx>=1.15.0",
    "onnxruntime>=1.16.0",
    "optimum[onnxruntime]>=1.16.0",
    "anthropic>=0.40.0",

    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "tqdm>=4.66.0",
    "datasketch>=1.6.0",
]
